# auth0-rust-starter

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  auth_config.json  index.html
frontend/src/: lib.rs
